# stm32nucleo-f446re

./: .gitignore  Cargo.toml  Embed.toml  LICENSE  README.md
.cargo/: config
examples/: blinky.rs  hello.rs
src/: led.rs  lib.rs
