[package]
name = "stm32nucleo-f446re"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
features = []
targets = ["thumbv7em-none-eabihf"]

[dependencies]
cortex-m-rt = "0.6.14"
panic-halt = "0.2.0"
# stm32f4xx-hal = { version = "0.9.0", features = ["stm32f446"] }

[dependencies.stm32f4xx-hal]
default-features = false
features = ["rt", "stm32f411"]
version = "0.9.0"

[profile.dev]
debug = true

[profile.release]
debug = true
lto = true
opt-level = "s"

[dependencies.panic-itm]
version = "0.4.2"
