[package]
name = "stm32nucleo-f446re"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
features = []
targets = ["thumbv7em-none-eabihf"]

[dependencies]
cortex-m = "0.7.5"
cortex-m-rt = "0.7.1"
panic-halt = "0.2.0"

[dependencies.stm32f4xx-hal]
features = ["rt", "stm32f446"]
version = "0.13.2"

#[dependencies.panic-probe]
#version = "0.2"
#features = ["print-rtt"]

[dependencies.panic-rtt-target]
version = "0.1.2"
features = ["cortex-m"]

[dependencies.rtt-target]
version = "0.3.1"
features = ["cortex-m"]

[profile.dev]
debug = true

[profile.release]
debug = true
lto = true
opt-level = "s"
